--- a/static/index.html
+++ b/static/index.html
@@ -2,8 +2,8 @@
 <html>
 <head>
     <title>gf websocket echo server</title>
-    <link rel="stylesheet" href="//cdn.bootcss.com/bootstrap/3.3.5/css/bootstrap.min.css">
-    <script src="//cdn.bootcss.com/jquery/1.11.3/jquery.min.js"></script>
+    <link rel="stylesheet" href="/css/bootstrap.min.css">
+    <script src="/js/jquery.min.js"></script>
     <style>
       body {
         padding-bottom: 100px;
@@ -16,6 +16,10 @@
     <div>
         <div><input class="form-control" id="txtContent" autofocus rows="6" placeholder="请输入发送内容"></div>
         <div><button class="btn btn-default" id="btnSend" style="margin-top:15px">发 送</button></div>
+    </div>
+    <h3>快捷操作</h3>
+    <div>
+        <button class="btn btn-primary" id="ping" >PING</button>
     </div>
 </div>
 </body>
@@ -71,6 +75,11 @@
             alert(e.message);
         }
 
+        function send(content) {
+            showSuccess("发送：" + content);
+            ws.send(content);
+        }
+
         // 按钮点击发送数据
         $("#btnSend").on("click", function () {
             if (ws == null) {
@@ -82,9 +91,8 @@
                 alert("请输入发送内容!");
                 return;
             }
-            $("#txtContent").val("")
-            showSuccess("发送：" + content);
-            ws.send(content);
+            $("#txtContent").val("");
+            send(content);
         });
 
         // 回车按钮触发发送点击事件
@@ -92,6 +100,10 @@
             if (event.keyCode == 13) {
                 $("#btnSend").trigger("click");
             }
+        });
+
+        $("#ping").on("click", function () {
+            send("ping");
         });
     })
 
