增加主动推送的能力，即将所有WebSocket管理起来

--- a/static/index.html
+++ b/static/index.html
@@ -21,6 +21,7 @@
     <div>
         <button class="btn btn-primary" id="ping" >PING</button>
         <button class="btn btn-primary" id="add" >Test Add</button>
+        <button class="btn btn-primary" id="push" >主动推送</button>
     </div>
 </div>
 </body>
@@ -111,6 +112,9 @@
                 cmd: 'testAdd',
                 data: [1, Math.ceil(Math.random() * 100), 3],
             }));
+        });
+        $("#push").on("click", function () {
+            fetch('/push').then((e) => console.log(e))
         });
     })
 
